--- a/urlApp/templates/urlApp/index.html
+++ b/urlApp/templates/urlApp/index.html
@@ -25,7 +25,6 @@
     </div>
 
     <div class="result-section" id="resultSection">
-        <!-- <h3 id="resultTitle">Shortened URL:</h3> -->
         <div class="url-display" id="resultUrl">
             <button class="copy-btn" onclick="copyToClipboard()">📋 Copy</button>
         </div>
@@ -47,7 +46,7 @@
         })
         .then(response => response.json())
         .then(data => {
-            document.querySelector('.result-section').innerHTML = "<h1>Shortened URL: </h1>" + data.result;
+            document.querySelector('.result-section').innerHTML = "<h1>Shortened URL: </h1>" + data.shorturl;
             })
         }
     
@@ -56,25 +55,23 @@
             document.getElementById('resultSection').innerHTML = '';
         }
 
-        // function switchTab(mode) {
-        //     currentMode = mode;
-        //     const tabs = document.querySelectorAll('.tab');
-        //     tabs.forEach(tab => tab.classList.remove('active'));
+        function switchTab(mode) {
+            currentMode = mode;
+            const tabs = document.querySelectorAll('.tab');
+            tabs.forEach(tab => tab.classList.remove('active'));
             
-        //     if (mode === 'shorten') {
-        //         tabs[0].classList.add('active');
-        //         document.getElementById('inputLabel').textContent = 'Enter a long URL to shorten:';
-        //         document.getElementById('process-Btn').innerHTML = '🚀 Shorten URL';
-        //         urlInput.placeholder = 'https://example.com/very/long/url/path/here';
-        //     } else {
-        //         tabs[1].classList.add('active');
-        //         document.getElementById('inputLabel').textContent = 'Enter a short URL to expand:';
-        //         document.getElementById('process-Btn').innerHTML = '🔍 Expand URL';
-        //         urlInput.placeholder = 'https://short.ly/abc123 or abc123';
-        //     }
-            
-        //     clearAll();
-        // }
+            if (mode === 'shorten') {
+                tabs[0].classList.add('active');
+                document.getElementById('inputLabel').textContent = 'Enter a long URL to shorten:';
+                document.getElementById('process-Btn').innerHTML = '🚀 Shorten URL';
+                urlInput.placeholder = 'https://example.com/very/long/url/path/here';
+            } else {
+                tabs[1].classList.add('active');
+                document.getElementById('inputLabel').textContent = 'Enter a short URL to expand:';
+                document.getElementById('process-Btn').innerHTML = '🔍 Expand URL';
+                urlInput.placeholder = 'https://short.ly/abc123 or abc123';
+            }
+        }
     </script>   
 </body>
 </html>
